@@ -26,9 +26,10 @@
 # 20. Extreme POS values (0 and ‭2147483647‬ == 0x7ffffff)
 # 21. ID - numeric, non-numeric, partial-numeric, numeric 10+ digits, leading 0
 # 22. Optimization - FORMAT subfields GL,GP,PL and INFO subfield VQSLOD
+# 23. DP and MIN_DP - FORMAT subfields - case when they're identical and case when not
 #CHROM	POS	ID	REF	ALT	QUAL	FILTER	INFO	FORMAT	Person1	Person2	Person3	Person4	Person5
 12	0	rs1	G	A	100	PASS	I12345678=A;I2=a	GT:GL:GP:PL	1:-0.5999,-.1111,-.2222:-0.995,-0.1234578,-2.999:300,500,2	0:-0.995,-0.1234578,-2.999	0	17	18
-1	207237234	rs123	G	A	100	PASS	I12345678=A;I2=b	GT:GL	0|0:0,-.1,-2.	10|4	0|.	1	10|4
+1	207237234	rs123	G	A	100	PASS	I12345678=A;I2=b	GT:DP:MIN_DP:GL	0|0:0,-.1,-2.:5:5	10|4:5:6	0|.	1	10|4
 13	207237235	no;numbers	T	T	100	PASS	I2=a;NOVALUE;I3=x;VQSLOD=-4.19494	GT	./99	0|.|0	0|.|11	10|4|55	10|4|55
 13	14	12345678	A	C	100	PASS	Info3	ABCDEFGHJ:GL	xx
 13	207237510	123456789012345	C	A	100	PASS	Info1	GT	./99/92	0/./0	0/./11	10/4/55	10/4/55
